src/MyLang.java
/* Generated By:JavaCC: Do not edit this line. MyLang.java */
import java.util.Scanner;
import java.io.FileInputStream;
import java.io.FileNotFoundException;

public class MyLang implements MyLangConstants {
  public static void main(String args []) throws ParseException, TokenMgrError, NumberFormatException
    {
    try {
      MyLang parser = null;
      if (args.length > 0)
      parser = new MyLang(new FileInputStream(args[0]));
      else
      {
             System.out.print("Program filename: ");
             Scanner in = new Scanner(System.in);
             parser = new MyLang(new FileInputStream(in.next()));
       }
      Statement stm = MyLang.Start();
    //  System.out.print(stm);
      stm.evaluate(new Env());
    }
    catch (FileNotFoundException e)
    {
           System.out.println(e.getMessage());
    }
    catch (RuntimeException e)
    {
           System.out.println(e.getMessage());
    }
            System.exit(0);
  }

//start
  static final public Statement Start() throws ParseException {
    trace_call("Start");
    try {
  Statement stm = new EmptyStm();
      stm = multiStatement();
      jj_consume_token(0);
   {if (true) return stm;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Start");
    }
  }

  static final public Declaration decParse() throws ParseException {
    trace_call("decParse");
    try {
 Token id; Expression exp;
      jj_consume_token(VAR);
      id = jj_consume_token(ID);
      jj_consume_token(44);
      exp = expParse();
      jj_consume_token(45);
   {if (true) return new Declaration(id.image, exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("decParse");
    }
  }

  static final public Expression varParse() throws ParseException {
    trace_call("varParse");
    try {
 Token id;
      id = jj_consume_token(ID);
    {if (true) return new Variable(id.image);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("varParse");
    }
  }

  static final public Expression readParse() throws ParseException {
    trace_call("readParse");
    try {
 Expression exp;
      jj_consume_token(READ);
   exp = new Read();
   {if (true) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("readParse");
    }
  }

  static final public Write writeParse() throws ParseException {
    trace_call("writeParse");
    try {
 Expression exp;
      jj_consume_token(WRITE);
      exp = expParse();
      jj_consume_token(45);
   {if (true) return new Write(exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("writeParse");
    }
  }

  static final public Parameter paramParse() throws ParseException {
    trace_call("paramParse");
    try {
 Expression exp;
      exp = expParse();
   {if (true) return new Parameter(exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramParse");
    }
  }

  static final public Parameter multiParamParse() throws ParseException {
    trace_call("multiParamParse");
    try {
 Parameter first = null; Parameter last = null; Parameter next = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
      case TRUE:
      case FALSE:
      case READ:
      case NOT:
      case LP:
      case LSP:
      case INTEGER:
      case ID:
      case 47:
        last = paramParse();
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 46:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          jj_consume_token(46);
          next = paramParse();
        }
    if(first == null)
        first = last;
    last.nextParam = next;
    last = next;
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
   {if (true) return first;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("multiParamParse");
    }
  }

  static final public FunctionCallExpression funcCallExpParse() throws ParseException {
    trace_call("funcCallExpParse");
    try {
  Parameter p = null; Token id;
      id = jj_consume_token(ID);
      jj_consume_token(LP);
      p = multiParamParse();
      jj_consume_token(RP);
   {if (true) return new FunctionCallExpression(id.image, p);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("funcCallExpParse");
    }
  }

  static final public Expression listParse() throws ParseException {
    trace_call("listParse");
    try {
 ListExp listExp = new ListExp(); Expression exp1 = null; Expression exp2 = null;
      jj_consume_token(LSP);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MINUS:
        case TRUE:
        case FALSE:
        case READ:
        case NOT:
        case LP:
        case LSP:
        case INTEGER:
        case ID:
        case 47:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        exp2 = expParse();
                      listExp.addExp(exp2);
      }
   exp1 = listExp;
      jj_consume_token(RSP);
   {if (true) return exp1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("listParse");
    }
  }

  static final public Expression primaryExpParse() throws ParseException {
    trace_call("primaryExpParse");
    try {
  Expression exp;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
      case TRUE:
      case FALSE:
      case INTEGER:
      case 47:
        exp = literalParse();
        break;
      default:
        jj_la1[3] = jj_gen;
        if (jj_2_1(2147483647)) {
          exp = funcCallExpParse();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            exp = varParse();
            break;
          case LSP:
            exp = listParse();
            break;
          case LP:
            jj_consume_token(LP);
            exp = expParse();
            jj_consume_token(RP);
            break;
          case READ:
            exp = readParse();
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    {if (true) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("primaryExpParse");
    }
  }

  static final public Expression postfixExpParse() throws ParseException {
    trace_call("postfixExpParse");
    try {
 Expression exp, exp2;
      exp = primaryExpParse();
      label_3:
      while (true) {
        if (jj_2_2(2147483647)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(DOT);
        jj_consume_token(LENGTH);
                                           exp = new ListLength(exp);
      }
   {if (true) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("postfixExpParse");
    }
  }

  static final public Expression notExpParse() throws ParseException {
    trace_call("notExpParse");
    try {
 Expression exp;
      label_4:
      while (true) {
        jj_consume_token(NOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
      }
      exp = postfixExpParse();
                                      exp = new Not(exp);
   {if (true) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("notExpParse");
    }
  }

  static final public Expression prefixExpParse() throws ParseException {
    trace_call("prefixExpParse");
    try {
  Expression exp = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        exp = notExpParse();
        break;
      case MINUS:
      case TRUE:
      case FALSE:
      case READ:
      case LP:
      case LSP:
      case INTEGER:
      case ID:
      case 47:
        exp = postfixExpParse();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
   {if (true) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("prefixExpParse");
    }
  }

  static final public Expression multiplicativeExpParse() throws ParseException {
    trace_call("multiplicativeExpParse");
    try {
 Expression left, right;
      left = prefixExpParse();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLY:
        case DIVIDE:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLY:
          jj_consume_token(MULTIPLY);
          right = prefixExpParse();
                                              left = new Multiply(left, right);
          break;
        case DIVIDE:
          jj_consume_token(DIVIDE);
          right = prefixExpParse();
                                            left = new Divide(left, right);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
   {if (true) return left;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("multiplicativeExpParse");
    }
  }

  static final public Expression additiveExpParse() throws ParseException {
    trace_call("additiveExpParse");
    try {
  Expression left, right;
      left = multiplicativeExpParse();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          right = multiplicativeExpParse();
                                                  left = new Add(left, right);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          right = multiplicativeExpParse();
                                                   left = new Subtract(left, right);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
   {if (true) return left;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("additiveExpParse");
    }
  }

  static final public Expression comparisonExpsParse() throws ParseException {
    trace_call("comparisonExpsParse");
    try {
 Expression left, right;
      left = additiveExpParse();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LT:
        case GT:
        case EQ:
        case NE:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_7;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LT:
          jj_consume_token(LT);
          right = additiveExpParse();
                                          left = new LessThan(left, right);
          break;
        case GT:
          jj_consume_token(GT);
          right = additiveExpParse();
                                          left = new GreaterThan(left, right);
          break;
        case EQ:
          jj_consume_token(EQ);
          right = additiveExpParse();
                                          left = new Equal(left, right);
          break;
        case NE:
          jj_consume_token(NE);
          right = additiveExpParse();
                                          left = new NotEqual(left, right);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    {if (true) return left;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("comparisonExpsParse");
    }
  }

  static final public Expression andExpParse() throws ParseException {
    trace_call("andExpParse");
    try {
 Expression left, right;
      left = comparisonExpsParse();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_8;
        }
        jj_consume_token(AND);
        right = comparisonExpsParse();
                                              left = new And(left, right);
      }
   {if (true) return left;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("andExpParse");
    }
  }

  static final public Expression orExpParse() throws ParseException {
    trace_call("orExpParse");
    try {
 Expression left, right;
      left = andExpParse();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_9;
        }
        jj_consume_token(OR);
        right = andExpParse();
                                     left = new Or(left, right);
      }
   {if (true) return left;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("orExpParse");
    }
  }

  static final public Expression expParse() throws ParseException {
    trace_call("expParse");
    try {
 Expression exp;
      exp = orExpParse();
   {if (true) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expParse");
    }
  }

  static final public Assign assignParse() throws ParseException {
    trace_call("assignParse");
    try {
 Token id; Expression exp;
      id = jj_consume_token(ID);
      jj_consume_token(44);
      exp = expParse();
      jj_consume_token(45);
   {if (true) return new Assign(id.image, exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("assignParse");
    }
  }

  static final public Conditional conditionParse() throws ParseException {
    trace_call("conditionParse");
    try {
  Expression cond = null;
Statement thenStm = new EmptyStm();
Statement elseStm = new EmptyStm();
      jj_consume_token(IF);
      jj_consume_token(LP);
      cond = expParse();
      jj_consume_token(RP);
      jj_consume_token(LCB);
      thenStm = multiStatement();
      jj_consume_token(RCB);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        jj_consume_token(LCB);
        elseStm = multiStatement();
        jj_consume_token(RCB);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    {if (true) return new Conditional(cond, thenStm, elseStm);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("conditionParse");
    }
  }

  static final public WhileLoop whileLoopParse() throws ParseException {
    trace_call("whileLoopParse");
    try {
  Expression cond = null; Statement stm = new EmptyStm();
      jj_consume_token(WHILE);
      jj_consume_token(LP);
      cond = expParse();
      jj_consume_token(RP);
      jj_consume_token(LCB);
      stm = multiStatement();
      jj_consume_token(RCB);
   {if (true) return new WhileLoop(cond, stm);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("whileLoopParse");
    }
  }

  static final public FormalParameter formalParamParse() throws ParseException {
    trace_call("formalParamParse");
    try {
 Token id = null;
      id = jj_consume_token(ID);
   {if (true) return new FormalParameter(id.image);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("formalParamParse");
    }
  }

  static final public FormalParameter multiFormalParam() throws ParseException {
    trace_call("multiFormalParam");
    try {
  FormalParameter first = null; FormalParameter last = null; FormalParameter next = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        last = formalParamParse();
        label_10:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 46:
            ;
            break;
          default:
            jj_la1[16] = jj_gen;
            break label_10;
          }
          jj_consume_token(46);
          next = formalParamParse();
        }
        if(first == null)
                first = last;
        last.next = next;
        last = next;
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      {if (true) return first;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("multiFormalParam");
    }
  }

  static final public FunctionDeclaration funcDecParse() throws ParseException {
    trace_call("funcDecParse");
    try {
  Token id; FormalParameter fp; Statement stm;
      jj_consume_token(FUNC);
      id = jj_consume_token(ID);
      jj_consume_token(LP);
      fp = multiFormalParam();
      jj_consume_token(RP);
      jj_consume_token(LCB);
      stm = multiStatement();
      jj_consume_token(RCB);
    {if (true) return new FunctionDeclaration(id.image, fp, stm);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("funcDecParse");
    }
  }

  static final public Return returnParse() throws ParseException {
    trace_call("returnParse");
    try {
  Expression exp;
      jj_consume_token(RETURN);
      exp = expParse();
      jj_consume_token(45);
   {if (true) return new Return(exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("returnParse");
    }
  }

//doesn't return anything
  static final public ListAdd listAddParse() throws ParseException {
    trace_call("listAddParse");
    try {
 Expression exp, exp2;
      exp = primaryExpParse();
      jj_consume_token(DOT);
      jj_consume_token(ADD);
      jj_consume_token(LP);
      exp2 = intLiteralParse();
      jj_consume_token(RP);
      jj_consume_token(45);
   {if (true) return new ListAdd(exp2);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("listAddParse");
    }
  }

  static final public AddtoList addtoListParse() throws ParseException {
    trace_call("addtoListParse");
    try {
 Expression list, exp;
      jj_consume_token(ADD);
      jj_consume_token(LP);
      list = listParse();
      jj_consume_token(46);
      exp = intLiteralParse();
      jj_consume_token(RP);
      jj_consume_token(45);
 {if (true) return new AddtoList(list, exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("addtoListParse");
    }
  }

  static final public FunctionCallStm funcCallStmParse() throws ParseException {
    trace_call("funcCallStmParse");
    try {
  Parameter p = null; Token id;
      id = jj_consume_token(ID);
      jj_consume_token(LP);
      p = multiParamParse();
      jj_consume_token(RP);
      jj_consume_token(45);
    {if (true) return new FunctionCallStm(id.image, p);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("funcCallStmParse");
    }
  }

  static final public Statement statementParse() throws ParseException {
    trace_call("statementParse");
    try {
  Statement stm = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        stm = decParse();
        break;
      default:
        jj_la1[18] = jj_gen;
        if (jj_2_3(2147483647)) {
          stm = funcCallStmParse();
        } else if (jj_2_4(2147483647)) {
          stm = assignParse();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case MINUS:
          case TRUE:
          case FALSE:
          case READ:
          case LP:
          case LSP:
          case INTEGER:
          case ID:
          case 47:
            stm = listAddParse();
            break;
          case ADD:
            stm = addtoListParse();
            break;
          case IF:
            stm = conditionParse();
            break;
          case WHILE:
            stm = whileLoopParse();
            break;
          case FUNC:
            stm = funcDecParse();
            break;
          case RETURN:
            stm = returnParse();
            break;
          case WRITE:
            stm = writeParse();
            break;
          default:
            jj_la1[19] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
   {if (true) return stm;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("statementParse");
    }
  }

  static final public Statement multiStatement() throws ParseException {
    trace_call("multiStatement");
    try {
  Statement first = new EmptyStm(); Statement last = first; Statement next = null;
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MINUS:
        case RETURN:
        case IF:
        case WHILE:
        case FUNC:
        case VAR:
        case TRUE:
        case FALSE:
        case READ:
        case WRITE:
        case LP:
        case LSP:
        case ADD:
        case INTEGER:
        case ID:
        case 47:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_11;
        }
        next = statementParse();
    last.next = next;
    last = next;
      }
   {if (true) return first;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("multiStatement");
    }
  }

  static final public StrLiteral strLiteralParse() throws ParseException {
    trace_call("strLiteralParse");
    try {
 Token t;
      jj_consume_token(47);
      t = jj_consume_token(ID);
      jj_consume_token(47);
                       {if (true) return new StrLiteral(t.image);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("strLiteralParse");
    }
  }

  static final public BoolLiteral boolLiteralParse() throws ParseException {
    trace_call("boolLiteralParse");
    try {
  Token t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
        t = jj_consume_token(TRUE);
                 {if (true) return new BoolLiteral(true);}
        break;
      case FALSE:
        t = jj_consume_token(FALSE);
                  {if (true) return new BoolLiteral(false);}
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("boolLiteralParse");
    }
  }

  static final public IntLiteral digit() throws ParseException {
    trace_call("digit");
    try {
  Token t;
      t = jj_consume_token(INTEGER);
                    {if (true) return new IntLiteral(Integer.parseInt(t.image));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("digit");
    }
  }

  static final public Expression intLiteralParse() throws ParseException {
    trace_call("intLiteralParse");
    try {
 Expression exp = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        jj_consume_token(MINUS);
        exp = digit();
                           {if (true) return new UnaryExp(exp);}
        break;
      case INTEGER:
        exp = digit();
                  {if (true) return exp;}
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("intLiteralParse");
    }
  }

  static final public Expression literalParse() throws ParseException {
    trace_call("literalParse");
    try {
  Expression exp;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
        exp = boolLiteralParse();
        break;
      case 47:
        exp = strLiteralParse();
        break;
      case MINUS:
      case INTEGER:
        exp = intLiteralParse();
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
   {if (true) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("literalParse");
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }
